[package]
name = "derive-into"
version = "0.2.4"
edition = "2024"
authors = ["Sharon Avni <sharonavni7@gmail.com>"]
description = "A Rust derive macro for easily creating conversions between structs and enums"
readme = "README.md"
repository = "https://github.com/sharonex/derive-into"
license = "MIT"
keywords = ["derive", "convert", "macro", "into", "from"]
categories = ["development-tools", "rust-patterns"]
documentation = "https://docs.rs/derive-into"

[features]
anyhow = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.52", features = ["full"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20.11"

[dev-dependencies]
trybuild = "1.0"
